[tool.poetry]
name = "timeRG"
version = "0.1.0"
description = ""
authors = ["Amol Upadhye <A.R.Upadhye@ljmu.ac.uk>", "Michael Buehlmann <buehlmann.michi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
camb = "^1.3.6"
matplotlib = "^3.6.2"
ipykernel = "^6.18.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '\.git|\.venv|build|_build|dist'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
